--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "node.js": "^0.0.1-security",
     "pg": "^8.11.3",
     "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
