--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
