--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,2 @@
-<<<<<<< HEAD
-REACT_APP_SERVER_DOMIN = https://hack4good.onrender.com/
-=======
-REACT_APP_SERVER_DOMIN = https://hack4good.onrender.com
->>>>>>> d5a57feb (.env fix)
+REACT_APP_SERVER_DOMIN = http://localhost:8080
+
